--- a/Assisgnment 2/index.html
+++ b/Assisgnment 2/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assignment-1-Raharja214</title>
-    <script src="main.js"></script>
+    <title>assignment-2-Raharja214</title>
 </head>
 <style>
     #Canvas{
@@ -17,13 +16,13 @@
     }
 </style>
 <body onload="main()">
-    <canvas id="myCanvas" width="700" height="700" style=" border: 7px solid rgb(0, 0, 0);">
+    <canvas id="myCanvas" width="700" height="700" style=" border: 1px solid rgb(0, 0, 0);">
     </canvas>
-    <script src="lightbox.js"></script>
-    <script src="jar-left.js"></script>
-    <script src="jar-right.js"></script>
-    <script src="gl-matrix-min.js"></script>
     <script src="main.js"></script>
+    <script src="jarLeft.js"></script>
+    <script src="jarRight.js"></script>
+    <script src="cubelight.js"></script>
+    <script src="gl-matrix-min.js"></script>
 </body>
 
 </html>
