--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="jarLeft.js"></script>
     <script src="jarRight.js"></script>
     <script src="cubelight.js"></script>
+    <script src="plane.js"></script>
     <script src="gl-matrix-min.js"></script>
     <script src="main.js"></script> 
     <p><h2>Assignment 3</h2></p>
